--- a/TrainingLogMobile/TrainingLogMobile/Base.lproj/Main.storyboard
+++ b/TrainingLogMobile/TrainingLogMobile/Base.lproj/Main.storyboard
@@ -54,13 +54,11 @@
                     <connections>
                         <outlet property="nameLabel" destination="QiM-wl-Zva" id="PeI-YC-u5z"/>
                         <outlet property="signInButton" destination="bVV-1A-OvV" id="0kG-CH-Sxa"/>
-                        <segue destination="oAS-SW-fj7" kind="show" identifier="registerUser" id="RA0-Qg-SPT"/>
-                        <segue destination="9AG-vW-Tel" kind="show" identifier="returnToDashboard" id="eAi-C6-dpq"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1737" y="1191"/>
+            <point key="canvasLocation" x="2370" y="1159"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="L82-ea-bKD">
@@ -76,7 +74,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Tug-Oh-2pM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="71" y="1191"/>
+            <point key="canvasLocation" x="902" y="459"/>
         </scene>
         <!--Dashboard-->
         <scene sceneID="KJQ-Jy-oKX">
@@ -106,7 +104,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Daily Questions"/>
                                 <connections>
-                                    <segue destination="o6C-BS-ZUv" kind="show" id="cOn-F1-hkO"/>
+                                    <segue destination="2nT-r5-ooC" kind="show" id="2YE-Pe-drB"/>
                                 </connections>
                             </button>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="N6W-4Q-Q3N">
@@ -132,20 +130,85 @@
             </objects>
             <point key="canvasLocation" x="901.60000000000002" y="1190.5547226386807"/>
         </scene>
-        <!--DailyQ View Controller-->
-        <scene sceneID="Gfa-aT-E6g">
+        <!--Questions View Controller-->
+        <scene sceneID="MeG-a4-oRn">
             <objects>
-                <viewController id="o6C-BS-ZUv" customClass="DailyQViewController" customModule="TrainingLogMobile" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="drt-6h-dPF">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
+                <pageViewController autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="2nT-r5-ooC" customClass="QuestionsViewController" customModule="TrainingLogMobile" customModuleProvider="target" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tSf-Pp-TQi" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="902" y="1971"/>
+        </scene>
+        <!--Question Controller-->
+        <scene sceneID="eIr-Aj-d9b">
+            <objects>
+                <viewController storyboardIdentifier="double" id="Wsy-dx-qbL" customClass="QuestionController" customModule="TrainingLogMobile" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="AnI-y3-sDr">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Double?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VvL-1O-X25">
+                                <rect key="frame" x="156" y="124" width="63" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="VGl-LG-7Px"/>
+                        <viewLayoutGuide key="safeArea" id="H7u-Xf-X9U"/>
                     </view>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="lzh-XX-959" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yiR-it-TYR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="923" y="1935"/>
+            <point key="canvasLocation" x="1714" y="1970"/>
+        </scene>
+        <!--Question Controller-->
+        <scene sceneID="KAc-2I-E3q">
+            <objects>
+                <viewController storyboardIdentifier="fuel" id="lW5-RL-JGr" customClass="QuestionController" customModule="TrainingLogMobile" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="UFN-qf-YYE">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Fuel?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="srp-n1-POg">
+                                <rect key="frame" x="167" y="122" width="41" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="siu-N7-cRZ"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="D2V-Bt-deo" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2510" y="1971"/>
+        </scene>
+        <!--Question Controller-->
+        <scene sceneID="twL-z5-xaK">
+            <objects>
+                <viewController storyboardIdentifier="stretch_roll" id="ehj-bS-y2f" customClass="QuestionController" customModule="TrainingLogMobile" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="BDj-4A-NSp">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Stretch and Roll?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zGq-YW-vKG">
+                                <rect key="frame" x="122" y="128" width="130" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="9JR-c5-f9i"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ady-LW-FgK" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3271" y="1970"/>
         </scene>
         <!--Registration View Controller-->
         <scene sceneID="H4o-ct-erZ">
@@ -192,16 +255,11 @@
                     <connections>
                         <outlet property="genderTextField" destination="2Nf-7N-3QJ" id="9UV-tC-vbu"/>
                         <outlet property="yearTextField" destination="qRF-jq-OPz" id="ltL-B6-vGz"/>
-                        <segue destination="9AG-vW-Tel" kind="show" identifier="returnToDashboard" id="4ya-2w-q6v"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gps-IV-zjw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1736.8" y="392.65367316341832"/>
+            <point key="canvasLocation" x="1681" y="835"/>
         </scene>
     </scenes>
-    <inferredMetricsTieBreakers>
-        <segue reference="4iM-cn-Xk7"/>
-        <segue reference="4ya-2w-q6v"/>
-    </inferredMetricsTieBreakers>
 </document>
